--- a/project/app_/templates/html2/base.html
+++ b/project/app_/templates/html2/base.html
@@ -33,16 +33,16 @@
                 <a class="nav-link text-primary text-opacity-100 me-4 p-2 border rounded-3 btn btn-outline-light" href="{% url 'home_side' %}">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-primary text-opacity-75 me-4 p-2 border rounded-3 btn btn-outline-light" href="#list-item-3">Menu</a>
+                <a class="nav-link text-primary text-opacity-75 me-4 p-2 border rounded-3 btn btn-outline-light" href="{% url 'menu_side' %}">Menu</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-primary text-opacity-75 me-4 p-2 border rounded-3 btn btn-outline-light" href="#list-item-3">ParkingSpot</a>
+                <a class="nav-link text-primary text-opacity-75 me-4 p-2 border rounded-3 btn btn-outline-light" href="#">ParkingSpot</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-primary text-opacity-75 me-4 p-2 border rounded-3 btn btn-outline-light" href="#list-item-3">Directions</a>
+                <a class="nav-link text-primary text-opacity-75 me-4 p-2 border rounded-3 btn btn-outline-light" href="#">Directions</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-primary text-opacity-100 me-4 p-2 border rounded-3 btn btn-outline-light " href="#list-item-2">About</a>
+                <a class="nav-link text-primary text-opacity-100 me-4 p-2 border rounded-3 btn btn-outline-light " href="#">About</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-primary text-opacity-75 p-2 border rounded-3 btn btn btn-outline-light" href="{% url 'contact_side' %}">Contact</a>
